Remove sensitive file and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 node_modules
 api/uploads/*
 "mydatasets-7a305-firebase-adminsdk-kibwx-4708d55395.json" 
+"mydatasets-7a305-firebase-adminsdk-kibwx-4708d55395.json" 
